--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "whatsapp-web.js": "^1.21.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "qrcode": "^1.5.3"
   }
 }
