--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "qrcode": "^1.5.3"
+    "qrcode": "^1.5.3",
+    "fs-extra": "^11.2.0"
   }
 }
